IaC/.serverless/cloudformation-template-update-stack.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "The AWS CloudFormation template for this Serverless application",
  "Resources": {
    "ServerlessDeploymentBucket": {
      "Type": "AWS::S3::Bucket",
      "Properties": {
        "BucketEncryption": {
          "ServerSideEncryptionConfiguration": [
            {
              "ServerSideEncryptionByDefault": {
                "SSEAlgorithm": "AES256"
              }
            }
          ]
        }
      }
    },
    "ServerlessDeploymentBucketPolicy": {
      "Type": "AWS::S3::BucketPolicy",
      "Properties": {
        "Bucket": {
          "Ref": "ServerlessDeploymentBucket"
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": "s3:*",
              "Effect": "Deny",
              "Principal": "*",
              "Resource": [
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "ServerlessDeploymentBucket"
                      },
                      "/*"
                    ]
                  ]
                },
                {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition"
                      },
                      ":s3:::",
                      {
                        "Ref": "ServerlessDeploymentBucket"
                      }
                    ]
                  ]
                }
              ],
              "Condition": {
                "Bool": {
                  "aws:SecureTransport": false
                }
              }
            }
          ]
        }
      }
    },
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "vpc-homebox"
          }
        ]
      }
    },
    "SubnetPubAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.0.0.70/26",
        "MapPublicIpOnLaunch": true,
        "AvailabilityZoneId": "use1-az1",
        "Tags": [
          {
            "Key": "Name",
            "Value": "sub-az1-pub-homebox"
          }
        ]
      }
    },
    "SubnetPriAZ1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.0.0.0/26",
        "MapPublicIpOnLaunch": false,
        "AvailabilityZoneId": "use1-az1",
        "Tags": [
          {
            "Key": "Name",
            "Value": "sub-az1-pri-homebox"
          }
        ]
      }
    },
    "SubnetPubAZ2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "AvailabilityZone": "us-east-1c",
        "VpcId": {
          "Ref": "VPC"
        },
        "CidrBlock": "10.0.0.128/26",
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "sub-az2-pub-homebox"
          }
        ]
      }
    },
    "IgwHomebox": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "igw-homebox"
          }
        ]
      }
    },
    "AttachGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "VPC"
        },
        "InternetGatewayId": {
          "Ref": "IgwHomebox"
        }
      }
    },
    "SecurityGroupLBPub": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "sg_lb_homebox_az1",
        "GroupDescription": "sg_lb_homebox_az1",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80
          },
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443
          }
        ],
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": -1
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg_lb_homebox_az1"
          }
        ]
      }
    },
    "SecurityGroupPub": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "sg_pub_homebox_az1",
        "GroupDescription": "sg_pub_homebox_az1",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupLBPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupLBPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 3000,
            "ToPort": 3000
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupLBPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupLBPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443
          }
        ],
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": -1
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg_pub_homebox_az1"
          }
        ]
      }
    },
    "SecurityGroupPri": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "sg_pri_homebox_az1",
        "GroupDescription": "sg_pri_homebox_az1",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 8080,
            "ToPort": 8080
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupPubAz2"
            },
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupPubAz2"
            },
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupPubAz2"
            },
            "IpProtocol": "tcp",
            "FromPort": 8080,
            "ToPort": 8080
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupPubAz2"
            },
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443
          }
        ],
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": -1
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg_pri_homebox_az1"
          }
        ]
      }
    },
    "SecurityGroupPubAz2": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName": "sg_pub_homebox_az2",
        "GroupDescription": "sg_pub_homebox_az2",
        "VpcId": {
          "Ref": "VPC"
        },
        "SecurityGroupIngress": [
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupLBPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 22,
            "ToPort": 22
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupLBPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 3000,
            "ToPort": 3000
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupLBPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 80,
            "ToPort": 80
          },
          {
            "SourceSecurityGroupId": {
              "Ref": "SecurityGroupLBPub"
            },
            "IpProtocol": "tcp",
            "FromPort": 443,
            "ToPort": 443
          }
        ],
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "IpProtocol": -1
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "sg_pub_homebox_az2"
          }
        ]
      }
    },
    "KeyPairEC2Pub": {
      "Type": "AWS::EC2::KeyPair",
      "Properties": {
        "KeyName": "ch28082022Publica",
        "KeyType": "rsa"
      }
    },
    "KeyPairEC2Pri": {
      "Type": "AWS::EC2::KeyPair",
      "Properties": {
        "KeyName": "ch28082022Privada",
        "KeyType": "rsa"
      }
    },
    "EC2LoadBalancerAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-09f0703ad9e1c92a2",
        "KeyName": "ch28082022Publica",
        "InstanceType": "t2.medium",
        "SubnetId": {
          "Ref": "SubnetPubAZ1"
        },
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SecurityGroupLBPub",
              "GroupId"
            ]
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "VolumeType": "gp2",
              "VolumeSize": "20"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "ec2-pub-lb-az1"
          }
        ]
      }
    },
    "EipLoadBalancer": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "InstanceId": {
          "Ref": "EC2LoadBalancerAZ1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "eip-load-balancer"
          }
        ]
      }
    },
    "EC2FrontEndAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-00bfec5d1aed3fa1f",
        "KeyName": "ch28082022Publica",
        "InstanceType": "t2.medium",
        "SubnetId": {
          "Ref": "SubnetPubAZ1"
        },
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SecurityGroupPub",
              "GroupId"
            ]
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "VolumeType": "gp2",
              "VolumeSize": "100"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "ec2-pub-front-end-az1"
          }
        ]
      }
    },
    "EipFrontEndAz1": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "InstanceId": {
          "Ref": "EC2FrontEndAZ1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "eip-front-end-az1"
          }
        ]
      }
    },
    "EC2PrivateAZ1": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-07beba960ae6860e6",
        "KeyName": "ch28082022Privada",
        "InstanceType": "t2.medium",
        "SubnetId": {
          "Ref": "SubnetPriAZ1"
        },
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SecurityGroupPri",
              "GroupId"
            ]
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "VolumeType": "gp2",
              "VolumeSize": "100"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "ec2-priv-back-bd-az1"
          }
        ]
      }
    },
    "EipPrivateAz1": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "InstanceId": {
          "Ref": "EC2PrivateAZ1"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "eip-back-end-az1"
          }
        ]
      }
    },
    "EC2FrontEndAZ2": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-01b08baa2e3d2e3ac",
        "KeyName": "ch28082022Publica",
        "InstanceType": "t2.medium",
        "SubnetId": {
          "Ref": "SubnetPubAZ2"
        },
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "SecurityGroupPubAz2",
              "GroupId"
            ]
          }
        ],
        "BlockDeviceMappings": [
          {
            "DeviceName": "/dev/sda1",
            "Ebs": {
              "VolumeType": "gp2",
              "VolumeSize": "100"
            }
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "ec2-pub-front-end-az2"
          }
        ]
      }
    },
    "EipFrontEndAz2": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "InstanceId": {
          "Ref": "EC2FrontEndAZ2"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "eip-front-end-az2"
          }
        ]
      }
    },
    "snsTopic": {
      "Type": "AWS::SNS::Topic",
      "Properties": {
        "DisplayName": "homebox-monitoria",
        "Subscription": [
          {
            "Endpoint": "homebox.monitoria@gmail.com",
            "Protocol": "email"
          }
        ],
        "TopicName": "homebox-monitoria"
      }
    }
  },
  "Outputs": {
    "ServerlessDeploymentBucketName": {
      "Value": {
        "Ref": "ServerlessDeploymentBucket"
      },
      "Export": {
        "Name": "sls-homebox-core-dev-ServerlessDeploymentBucketName"
      }
    }
  }
}
